--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id ="primeira">
       <h1> Ada Lovelace</h1>
-      <img src="img/adal.jpg" alt="Desenho Ada ensinando uma menina.">
+      <img src="img/adal.jpg" alt="Desenho Ada com menina.">
       <p class= "augusta"> <b>Augusta Ada King</b>, condessa de <b>Lovelace</b>, nasceu em Londres em 1815, mais conhecida como Ada Lovelace, foi a primeira pessoa a escrever um algoritmo para ser processado por uma máquina na história da computação.</p>  
     </section>
     
