--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <header>
       <!-- navbar -->
       <nav class="navbar">
-        <a href="/" class="navbar-logo">Tech Woman</a>
+        <a href="/" class="navbar-logo" img scr="img/logo-tech-w.jpg"></a>
         <ul class="navbar-list">
           <!-- Inicio -->
           <li><a href="/">Início</a></li>
@@ -23,7 +23,7 @@
     <!-- main -->
     <main>
       <!-- section - Banner principal -->
-      <img id="banner" scr="img/banner.png">
+      <img id="banner" scr="img/banner.png"> 
     
       <div class="principal">
         <h2 class="titulo-centralizado">Ada Lovelace</h2>
@@ -32,8 +32,8 @@
           Augusta Ada Byron King, Condessa de Lovelace, atualmente conhecida como Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software. 
           Por isso, muitas das evoluções tecnológicas que vieram depois dos estudos de Ada só foram possíveis devido às descobertas dela. 
         </p>
-      
       </div>
+
       <!-- section - Divas -->
     </main>
     <!-- footer -->
