--- a/main.html
+++ b/main.html
@@ -3,13 +3,14 @@
     <meta charset="UTF-8">
     <title>Tech Woman</title>
     <link href="main.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="assets/css/reset.css">
   </head>
   <body class="content">
     <!-- header -->
     <header>
       <!-- navbar -->
       <nav class="navbar">
-        <a href="/" class="navbar-logo">Tech Woman</a>
+        <a href="/" class="navbar-logo" alt="Logotipo Tech Woman">Tech Woman</a>
         <ul class="navbar-list">
           <!-- Inicio -->
           <li><a href="/">Início</a></li>
@@ -22,17 +23,19 @@
     </header>
     <!-- main -->
     <main>
-      <!-- section - Banner principal -->
-      <img id="banner" scr="img/banner.png"> 
-    
-      <div class="principal">
+
+      <section id="banner">
+        <img src="img/banner.png"> 
+      </section>
+
+      <section class="principal">
         <h2 class="titulo-centralizado">Ada Lovelace</h2>
         <img src="img/adal.jpg" class=imagem-ada">
         <p>
           Augusta Ada Byron King, Condessa de Lovelace, atualmente conhecida como Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software. 
           Por isso, muitas das evoluções tecnológicas que vieram depois dos estudos de Ada só foram possíveis devido às descobertas dela. 
         </p>
-      </div>
+      </section>
 
       <!-- section - Divas -->
     </main>
