--- a/main.html
+++ b/main.html
@@ -2,15 +2,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Tech Woman</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width">
+    
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Krub:wght@500&family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@500&family=Montserrat:wght@200&display=swap" rel="stylesheet">
+
   </head>
   <body class="content">
     <!-- header -->
     <header>
       <!-- navbar -->
       <nav class="navbar">
-        <a href="/" class="navbar-logo" alt="Logotipo Tech Woman">Tech Woman</a>
         <ul class="navbar-list">
           <!-- Inicio -->
           <li><a href="/">Início</a></li>
@@ -29,12 +33,10 @@
       </section>
 
       <section class="principal">
-        <h2 class="titulo-centralizado">Ada Lovelace</h2>
-        <img src="img/adal.jpg" class=imagem-ada">
-        <p>
-          Augusta Ada Byron King, Condessa de Lovelace, atualmente conhecida como Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software. 
-          Por isso, muitas das evoluções tecnológicas que vieram depois dos estudos de Ada só foram possíveis devido às descobertas dela. 
-        </p>
+        <div class="conteudo-principal">
+          <h2 class="titulo-centralizado">Ada Lovelace</h2>
+          <img src="img/adal.jpg" class="imagem-ada"><p> Augusta Ada Byron King, Condessa de Lovelace, atualmente conhecida como Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software. Por isso, muitas das evoluções tecnológicas que vieram depois dos estudos de Ada só foram possíveis devido às descobertas dela.</p>
+      </div>
       </section>
 
       <!-- section - Divas -->
