--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
           <!-- Divas -->
           <li><a href="#divas">Divas</a></li>
           <!-- Contatos -->
-          <li><a href="#footer">Contatos</a></li>
+          <li><a href="#footer">Contato</a></li>
         </ul>
       </nav>
     </header>
