--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <!-- Inicio -->
-          <li><a href="/">Início</a></li>
+          <li><a href="#">Início</a></li>
           <!-- Divas -->
           <li><a href="#divas">Divas</a></li>
           <!-- Contatos -->
@@ -35,8 +35,11 @@
       <section class="principal">
         <div class="conteudo-principal">
           <h2 class="titulo-centralizado">Ada Lovelace</h2>
-          <img src="img/adal.jpg" class="imagem-ada"><p> Augusta Ada Byron King, Condessa de Lovelace, atualmente conhecida como Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software. Por isso, muitas das evoluções tecnológicas que vieram depois dos estudos de Ada só foram possíveis devido às descobertas dela.</p>
-      </div>
+          <img src="img/adal.jpg" class="imagem-ada"><p> Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software.</p>
+          <nav class="botao_ada">
+            <a href="https://pt.wikipedia.org/wiki/Ada_Lovelace" target="_blanck">Mais sobre a Ada aqui</a>
+          </nav>
+        </div>
       </section>
 
       <!-- section - Divas -->
