--- a/main.html
+++ b/main.html
@@ -27,18 +27,28 @@
     </header>
     <!-- main -->
     <main>
-
+      
+      <!-- permanece section ou div?-->
       <section id="banner">
-        <img src="img/banner.png"> 
+        <img src="img/banner_tech.png"> 
       </section>
 
+      <!-- div de paragrafo e conteudo dentro de uma section?-->
       <section class="principal">
+        <h2 class="titulo-centralizado">Ada Lovelace</h2>
         <div class="conteudo-principal">
-          <h2 class="titulo-centralizado">Ada Lovelace</h2>
-          <img src="img/adal.jpg" class="imagem-ada"><p> Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software.</p>
-          <nav class="botao_ada">
+          <img src="img/adal.jpg" class="imagem-ada">
+          <div class="paragrafo_ada">
+            <p class="conteudo_ada"> Ada Lovelace, foi uma matemática e escritora inglesa. A primeira a utilizar um programa em algoritmo e a tomar conhecimento da importância dos algoritmos na construção de um software.</p>
+          </div>
+          
+         <!--usando button, pesquisar como se usa o link dentro da tag--> 
+         <button  href="https://pt.wikipedia.org/wiki/Ada_Lovelace">Mais sobre Ada aqui</button>
+
+          <!-- usando nav
+            <nav class="botao_ada">
             <a href="https://pt.wikipedia.org/wiki/Ada_Lovelace" target="_blanck">Mais sobre a Ada aqui</a>
-          </nav>
+          </nav> !-->
         </div>
       </section>
 
